--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "express": "^4.17.3",
     "express-form-data": "^2.0.17",
     "mongoose": "^6.2.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
+    "web-vitals": "^2.1.4"
   }
 }
